# cli

color_ls/: Cargo.toml
color_ls/src/: main.rs
rat/: Cargo.toml  poem.txt
rat/src/: main.rs
roulette/: Cargo.toml
roulette/src/: game.rs  main.rs
